# rest-api-ingestion

./: .env.example  .gitignore  README.en.md  README.fr.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: iamdataeng-evaluate.yml
contracts/: issues.json
mock_api/: data.py  server.py
src/ingest/: laneway.py
tests/: conftest.py  test_evaluate.py
